--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,25 @@
             <artifactId>cglib-nodep</artifactId>
             <version>3.2.3</version>
         </dependency>
+
+<!--        二维码-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.3.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>4.5.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
