--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,19 @@
             <version>4.5.1</version>
         </dependency>
 
+<!--        校验关键字-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.4.2.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>4.2.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
